--- a/index.html
+++ b/index.html
@@ -92,24 +92,24 @@
         <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 pad0 banner_left_page2"></div>
         <div class="col-lg-8 col-md-8 col-sm-8 col-xs-12 pad0 wrapper_carousel">
           <span id="lblTitle" class="i_want_page2">Uploading</span>
-          <!--<div id="carousel-example-generic" class="carousel" data-ride="carousel">-->
-            <!--<div class="carousel-inner">-->
-              <!--<div class="item active">-->
-                <!--<a class="fancybox"-->
-                   <!--href='https://nd1.bringscreen.com/ca39683b66eeea9ab3d91f6bd4030c7a/4/i1a8kCbd3wtIfo.png'-->
-                   <!--data-fancybox-group="gallery"-->
-                   <!--title='127     Google Chrome'>-->
-                  <!--<img class="img-fluid center-block"-->
-                       <!--src='https://nd1.bringscreen.com/ca39683b66eeea9ab3d91f6bd4030c7a/4/i1a8kCbd3wtIfo.png'-->
-                       <!--alt='127     Google Chrome'-->
-                  <!--/>-->
-                <!--</a>-->
-                <!--<div class="fb-like" data-href='https://bringScreen.com/CnA07BBD7pSqCJr' data-layout="button"-->
-                     <!--data-action="like" data-show-faces="true"-->
-                     <!--data-share="true"></div>-->
-              <!--</div>-->
-            <!--</div>-->
-          <!--</div>-->
+          <div id="carousel-example-generic" class="carousel" data-ride="carousel">
+            <div class="carousel-inner">
+              <div class="item active">
+                <a class="fancybox"
+                   href='https://nd1.bringscreen.com/ca39683b66eeea9ab3d91f6bd4030c7a/4/i1a8kCbd3wtIfo.png'
+                   data-fancybox-group="gallery"
+                   title='127     Google Chrome'>
+                  <img class="img-fluid center-block"
+                       src='https://nd1.bringscreen.com/ca39683b66eeea9ab3d91f6bd4030c7a/4/i1a8kCbd3wtIfo.png'
+                       alt='127     Google Chrome'
+                  />
+                </a>
+                <div class="fb-like" data-href='https://bringScreen.com/CnA07BBD7pSqCJr' data-layout="button"
+                     data-action="like" data-show-faces="true"
+                     data-share="true"></div>
+              </div>
+            </div>
+          </div>
         </div>
         <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 pad0 banner_right_page2">
           <!-- <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
@@ -134,33 +134,6 @@
         </div>
       </div>
     </div>
-  </div>
-  <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-     Indicators
-    <ol class="carousel-indicators">
-      <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-      <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-      <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-    </ol>
-
-    <!-- Wrapper for slides -->
-    <div class="carousel-inner">
-      <div class="item active">
-        <img src="images/open_fancy_img.png" alt="...">
-        <div class="carousel-caption">
-          ...
-        </div>
-      </div>
-      ...
-    </div>
-
-    <!-- Controls -->
-    <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
-      <span class="glyphicon glyphicon-chevron-left"></span>
-    </a>
-    <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
-      <span class="glyphicon glyphicon-chevron-right"></span>
-    </a>
   </div>
   <div class="container-fluid footer_page2">
     <div class="row footer_page2_row">
