--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html xmlns="https://www.w3.org/1999/xhtml">
 
 <head>
+  <meta charset="utf-8">
   <meta http-equiv="cache-control" content="max-age=0"/>
   <meta http-equiv="cache-control" content="no-cache"/>
   <meta http-equiv="expires" content="0"/>
@@ -108,6 +109,18 @@
                      data-action="like" data-show-faces="true"
                      data-share="true"></div>
               </div>
+              <div class="text_detect-menu dropdown">
+                <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                  Text detect
+                  <span class="caret"></span>
+                </button>
+                <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                  <li><a href='/screen-text-detect.aspx?url=CnA07BBD7pSqCJr&lang=eng'>English</a></li>
+                  <li><a href='/screen-text-detect.aspx?url=CnA07BBD7pSqCJr&lang=rus'>Russian</a></li>
+                </ul>
+                <span class="text_detect-btn">Распознать</span>
+              </div>
+
             </div>
           </div>
         </div>
@@ -121,16 +134,6 @@
               <script>
               (adsbygoogle = window.adsbygoogle || []).push({});
               </script> -->
-        </div>
-        <div class="text_detect-drop dropdown">
-          <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-            Text detect
-            <span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-            <a href='/screen-text-detect.aspx?url=CnA07BBD7pSqCJr&lang=eng'>Text detect English</a>
-            <a href='/screen-text-detect.aspx?url=CnA07BBD7pSqCJr&lang=rus'>Text detect Russian</a>
-          </ul>
         </div>
       </div>
     </div>
