добавил тектовый блок и стилизовал его

--- a/index.html
+++ b/index.html
@@ -93,36 +93,36 @@
         <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 pad0 banner_left_page2"></div>
         <div class="col-lg-8 col-md-8 col-sm-8 col-xs-12 pad0 wrapper_carousel">
           <span id="lblTitle" class="i_want_page2">Uploading</span>
-          <!--<div id="carousel-example-generic" class="carousel" data-ride="carousel">-->
-            <!--<div class="carousel-inner">-->
-              <!--<div class="item active">-->
-                <!--<a class="fancybox"-->
-                   <!--href='https://nd1.bringscreen.com/ca39683b66eeea9ab3d91f6bd4030c7a/4/i1a8kCbd3wtIfo.png'-->
-                   <!--data-fancybox-group="gallery"-->
-                   <!--title='127     Google Chrome'>-->
-                  <!--<img class="img-fluid center-block"-->
-                       <!--src='https://nd1.bringscreen.com/ca39683b66eeea9ab3d91f6bd4030c7a/4/i1a8kCbd3wtIfo.png'-->
-                       <!--alt='127     Google Chrome'-->
-                  <!--/>-->
-                <!--</a>-->
-                <!--<div class="fb-like" data-href='https://bringScreen.com/CnA07BBD7pSqCJr' data-layout="button"-->
-                     <!--data-action="like" data-show-faces="true"-->
-                     <!--data-share="true"></div>-->
-              <!--</div>-->
-              <!--<div class="text_detect-menu dropdown">-->
-                <!--<button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">-->
-                  <!--Text detect-->
-                  <!--<span class="caret"></span>-->
-                <!--</button>-->
-                <!--<ul class="dropdown-menu" aria-labelledby="dropdownMenu1">-->
-                  <!--<li><a href='/screen-text-detect.aspx?url=CnA07BBD7pSqCJr&lang=eng'>English</a></li>-->
-                  <!--<li><a href='/screen-text-detect.aspx?url=CnA07BBD7pSqCJr&lang=rus'>Russian</a></li>-->
-                <!--</ul>-->
-                <!--<span class="text_detect-btn">Распознать</span>-->
-              <!--</div>-->
+          <div id="image" class="carousel" data-ride="carousel">
+            <div class="carousel-inner">
+              <div class="item active">
+                <a class="fancybox"
+                   href='https://nd1.bringscreen.com/ca39683b66eeea9ab3d91f6bd4030c7a/4/i1a8kCbd3wtIfo.png'
+                   data-fancybox-group="gallery"
+                   title='127     Google Chrome'>
+                  <img class="img-fluid center-block"
+                       src='https://nd1.bringscreen.com/ca39683b66eeea9ab3d91f6bd4030c7a/4/i1a8kCbd3wtIfo.png'
+                       alt='127     Google Chrome'
+                  />
+                </a>
+                <div class="fb-like" data-href='https://bringScreen.com/CnA07BBD7pSqCJr' data-layout="button"
+                     data-action="like" data-show-faces="true"
+                     data-share="true"></div>
+              </div>
+              <div class="text_detecter-menu dropdown">
+                <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                  Text detect
+                  <span class="caret"></span>
+                </button>
+                <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                  <li><a href='/screen-text-detect.aspx?url=CnA07BBD7pSqCJr&lang=eng'>English</a></li>
+                  <li><a href='/screen-text-detect.aspx?url=CnA07BBD7pSqCJr&lang=rus'>Russian</a></li>
+                </ul>
+                <span class="text_detecter-btn">Распознать</span>
+              </div>
 
-            <!--</div>-->
-          <!--</div>-->
+            </div>
+          </div>
 
 
 
@@ -134,26 +134,65 @@
               <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
               <li data-target="#carousel-example-generic" data-slide-to="1"></li>
               <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+              <li data-target="#carousel-example-generic" data-slide-to="3"></li>
             </ol>
 
             <!-- Wrapper for slides -->
             <div class="carousel-inner">
               <div class="item active">
-                <img src="images/logo_header.png" alt="...">
+                <a class="fancybox"
+                   href='https://nd1.bringscreen.com/ca39683b66eeea9ab3d91f6bd4030c7a/4/i1a8kCbd3wtIfo.png'
+                   data-fancybox-group="gallery"
+                   title='127     Google Chrome'>
+                  <img class="img-fluid center-block"
+                       src='https://nd1.bringscreen.com/ca39683b66eeea9ab3d91f6bd4030c7a/4/i1a8kCbd3wtIfo.png'
+                       alt='127     Google Chrome'
+                  />
+                </a>
                 <div class="carousel-caption">
-                  ...
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor, sapiente.
                 </div>
               </div>
               <div class="item">
-                <img src="images/logo_header.png" alt="...">
+                <a class="fancybox"
+                   href='https://nd1.bringscreen.com/ca39683b66eeea9ab3d91f6bd4030c7a/4/i1a8kCbd3wtIfo.png'
+                   data-fancybox-group="gallery"
+                   title='127     Google Chrome'>
+                  <img class="img-fluid center-block"
+                       src='https://nd1.bringscreen.com/ca39683b66eeea9ab3d91f6bd4030c7a/4/i1a8kCbd3wtIfo.png'
+                       alt='127     Google Chrome'
+                  />
+                </a>
                 <div class="carousel-caption">
-                  ...
+                  Lorem ipsum dolor sit amet, consectetur adipisicing.
                 </div>
               </div>
               <div class="item">
-                <img src="images/logo_header.png" alt="...">
+                <a class="fancybox"
+                   href='https://nd1.bringscreen.com/ca39683b66eeea9ab3d91f6bd4030c7a/4/i1a8kCbd3wtIfo.png'
+                   data-fancybox-group="gallery"
+                   title='127     Google Chrome'>
+                  <img class="img-fluid center-block"
+                       src='https://nd1.bringscreen.com/ca39683b66eeea9ab3d91f6bd4030c7a/4/i1a8kCbd3wtIfo.png'
+                       alt='127     Google Chrome'
+                  />
+                </a>
                 <div class="carousel-caption">
-                  ...
+                  Lorem ipsum dolor sit amet, consectetur adipisicing.
+                </div>
+              </div>
+              <div class="item">
+                <a class="fancybox"
+                   href='https://nd1.bringscreen.com/ca39683b66eeea9ab3d91f6bd4030c7a/4/i1a8kCbd3wtIfo.png'
+                   data-fancybox-group="gallery"
+                   title='127     Google Chrome'>
+                  <img class="img-fluid center-block"
+                       src='https://nd1.bringscreen.com/ca39683b66eeea9ab3d91f6bd4030c7a/4/i1a8kCbd3wtIfo.png'
+                       alt='127     Google Chrome'
+                  />
+                </a>
+                <div class="carousel-caption">
+                  Lorem ipsum dolor sit amet.
                 </div>
               </div>
             </div>
@@ -165,6 +204,16 @@
             <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
               <span class="glyphicon glyphicon-chevron-right"></span>
             </a>
+          </div>
+
+
+
+
+
+          <div class="detect-text">
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam asperiores aspernatur commodi cupiditate debitis ducimus eum ipsa iusto laborum maiores minima, nemo, officia qui quidem voluptatum. Ad ipsum quo quos. Atque eligendi error molestias placeat! Commodi reiciendis repudiandae unde? Blanditiis debitis deleniti illo nesciunt odit. Et quia reiciendis repudiandae. A adipisci amet animi atque debitis dolor dolorem illum ipsam iste laboriosam libero maiores minus nulla odit officiis quaerat quo reiciendis repudiandae rerum saepe sequi, sunt ut velit vero voluptas voluptatibus voluptatum. Beatae consectetur eaque et harum in optio perferendis quo. Accusamus aspernatur blanditiis consectetur consequatur, delectus eaque esse eum eveniet ex explicabo fugiat impedit incidunt ipsum iste iure labore magnam maiores maxime nemo neque nostrum nulla numquam obcaecati officia optio perferendis quasi quidem quis ratione rerum similique tempore velit veniam vitae voluptas voluptatem, voluptates. A adipisci consectetur consequuntur eaque enim error exercitationem illum, inventore laborum molestias nobis odit sunt. Ab ad amet aspernatur atque autem commodi, delectus deserunt dicta earum eligendi esse est facilis fugit, illum incidunt iusto labore laudantium libero magnam natus necessitatibus, nihil nulla officiis perspiciatis porro quae quas qui rem saepe sed similique totam ullam veritatis? Atque, ex excepturi exercitationem illum impedit minima officiis perspiciatis ratione tenetur?
+            </p>
           </div>
 
 
