изменил параметры модального окна фансибокса

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
           <!--block for carousel---end---------------------------->
 
 
-          <!--block for the detected text---start----------------->
+          <!--block for detected text---start----------------->
           <div class="carousel-inner wrap_detect-text">
           <div class="detect-text">
             <p>
@@ -218,7 +218,7 @@
             </p>
           </div>
           </div>
-          <!--block for the detected text---end------------------->
+          <!--block for detected text---end------------------->
 
 
 
