отображаю только картинку и закоментив хтмл

--- a/index.html
+++ b/index.html
@@ -129,84 +129,84 @@
 
 
           <!--block for carousel---start-------------------------->
-          <div id="carousel-example-generic" class="carousel slide wrap_carousel" data-ride="carousel">
-            <!-- Indicators -->
-            <ol class="carousel-indicators">
-              <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-              <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-              <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-              <li data-target="#carousel-example-generic" data-slide-to="3"></li>
-            </ol>
-            <input type="button" class="redacting-btn" title="Редактировать">
+          <!--<div id="carousel-example-generic" class="carousel slide wrap_carousel" data-ride="carousel">-->
+            <!--&lt;!&ndash; Indicators &ndash;&gt;-->
+            <!--<ol class="carousel-indicators">-->
+              <!--<li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>-->
+              <!--<li data-target="#carousel-example-generic" data-slide-to="1"></li>-->
+              <!--<li data-target="#carousel-example-generic" data-slide-to="2"></li>-->
+              <!--<li data-target="#carousel-example-generic" data-slide-to="3"></li>-->
+            <!--</ol>-->
+            <!--<input type="button" class="redacting-btn" title="Редактировать">-->
 
-            <!-- Wrapper for slides -->
-            <div class="carousel-inner">
-              <div class="item active">
-                <a class="fancybox"
-                   href='https://nd1.bringscreen.com/ca39683b66eeea9ab3d91f6bd4030c7a/4/i1a8kCbd3wtIfo.png'
-                   data-fancybox-group="gallery"
-                   title='127     Google Chrome'>
-                  <img class="img-fluid center-block"
-                       src='https://nd1.bringscreen.com/ca39683b66eeea9ab3d91f6bd4030c7a/4/i1a8kCbd3wtIfo.png'
-                       alt='127     Google Chrome'
-                  />
-                </a>
-                <div class="carousel-caption">
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor, sapiente.
-                </div>
-              </div>
-              <div class="item">
-                <a class="fancybox"
-                   href='https://nd1.bringscreen.com/ca39683b66eeea9ab3d91f6bd4030c7a/4/i1a8kCbd3wtIfo.png'
-                   data-fancybox-group="gallery"
-                   title='127     Google Chrome'>
-                  <img class="img-fluid center-block"
-                       src='https://nd1.bringscreen.com/ca39683b66eeea9ab3d91f6bd4030c7a/4/i1a8kCbd3wtIfo.png'
-                       alt='127     Google Chrome'
-                  />
-                </a>
-                <div class="carousel-caption">
-                  Lorem ipsum dolor sit amet, consectetur adipisicing.
-                </div>
-              </div>
-              <div class="item">
-                <a class="fancybox"
-                   href='https://nd1.bringscreen.com/ca39683b66eeea9ab3d91f6bd4030c7a/4/i1a8kCbd3wtIfo.png'
-                   data-fancybox-group="gallery"
-                   title='127     Google Chrome'>
-                  <img class="img-fluid center-block"
-                       src='https://nd1.bringscreen.com/ca39683b66eeea9ab3d91f6bd4030c7a/4/i1a8kCbd3wtIfo.png'
-                       alt='127     Google Chrome'
-                  />
-                </a>
-                <div class="carousel-caption">
-                  Lorem ipsum dolor sit amet, consectetur adipisicing.
-                </div>
-              </div>
-              <div class="item">
-                <a class="fancybox"
-                   href='https://nd1.bringscreen.com/ca39683b66eeea9ab3d91f6bd4030c7a/4/i1a8kCbd3wtIfo.png'
-                   data-fancybox-group="gallery"
-                   title='127     Google Chrome'>
-                  <img class="img-fluid center-block"
-                       src='https://nd1.bringscreen.com/ca39683b66eeea9ab3d91f6bd4030c7a/4/i1a8kCbd3wtIfo.png'
-                       alt='127     Google Chrome'
-                  />
-                </a>
-                <div class="carousel-caption">
-                  Lorem ipsum dolor sit amet.
-                </div>
-              </div>
-            </div>
+            <!--&lt;!&ndash; Wrapper for slides &ndash;&gt;-->
+            <!--<div class="carousel-inner">-->
+              <!--<div class="item active">-->
+                <!--<a class="fancybox"-->
+                   <!--href='https://nd1.bringscreen.com/ca39683b66eeea9ab3d91f6bd4030c7a/4/i1a8kCbd3wtIfo.png'-->
+                   <!--data-fancybox-group="gallery"-->
+                   <!--title='127     Google Chrome'>-->
+                  <!--<img class="img-fluid center-block"-->
+                       <!--src='https://nd1.bringscreen.com/ca39683b66eeea9ab3d91f6bd4030c7a/4/i1a8kCbd3wtIfo.png'-->
+                       <!--alt='127     Google Chrome'-->
+                  <!--/>-->
+                <!--</a>-->
+                <!--<div class="carousel-caption">-->
+                  <!--Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor, sapiente.-->
+                <!--</div>-->
+              <!--</div>-->
+              <!--<div class="item">-->
+                <!--<a class="fancybox"-->
+                   <!--href='https://nd1.bringscreen.com/ca39683b66eeea9ab3d91f6bd4030c7a/4/i1a8kCbd3wtIfo.png'-->
+                   <!--data-fancybox-group="gallery"-->
+                   <!--title='127     Google Chrome'>-->
+                  <!--<img class="img-fluid center-block"-->
+                       <!--src='https://nd1.bringscreen.com/ca39683b66eeea9ab3d91f6bd4030c7a/4/i1a8kCbd3wtIfo.png'-->
+                       <!--alt='127     Google Chrome'-->
+                  <!--/>-->
+                <!--</a>-->
+                <!--<div class="carousel-caption">-->
+                  <!--Lorem ipsum dolor sit amet, consectetur adipisicing.-->
+                <!--</div>-->
+              <!--</div>-->
+              <!--<div class="item">-->
+                <!--<a class="fancybox"-->
+                   <!--href='https://nd1.bringscreen.com/ca39683b66eeea9ab3d91f6bd4030c7a/4/i1a8kCbd3wtIfo.png'-->
+                   <!--data-fancybox-group="gallery"-->
+                   <!--title='127     Google Chrome'>-->
+                  <!--<img class="img-fluid center-block"-->
+                       <!--src='https://nd1.bringscreen.com/ca39683b66eeea9ab3d91f6bd4030c7a/4/i1a8kCbd3wtIfo.png'-->
+                       <!--alt='127     Google Chrome'-->
+                  <!--/>-->
+                <!--</a>-->
+                <!--<div class="carousel-caption">-->
+                  <!--Lorem ipsum dolor sit amet, consectetur adipisicing.-->
+                <!--</div>-->
+              <!--</div>-->
+              <!--<div class="item">-->
+                <!--<a class="fancybox"-->
+                   <!--href='https://nd1.bringscreen.com/ca39683b66eeea9ab3d91f6bd4030c7a/4/i1a8kCbd3wtIfo.png'-->
+                   <!--data-fancybox-group="gallery"-->
+                   <!--title='127     Google Chrome'>-->
+                  <!--<img class="img-fluid center-block"-->
+                       <!--src='https://nd1.bringscreen.com/ca39683b66eeea9ab3d91f6bd4030c7a/4/i1a8kCbd3wtIfo.png'-->
+                       <!--alt='127     Google Chrome'-->
+                  <!--/>-->
+                <!--</a>-->
+                <!--<div class="carousel-caption">-->
+                  <!--Lorem ipsum dolor sit amet.-->
+                <!--</div>-->
+              <!--</div>-->
+            <!--</div>-->
 
-            <!-- Controls -->
-            <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
-              <span class="glyphicon slider-btn-left"></span>
-            </a>
-            <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
-              <span class="glyphicon slider-btn-right"></span>
-            </a>
-          </div>
+            <!--&lt;!&ndash; Controls &ndash;&gt;-->
+            <!--<a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">-->
+              <!--<span class="glyphicon slider-btn-left"></span>-->
+            <!--</a>-->
+            <!--<a class="right carousel-control" href="#carousel-example-generic" data-slide="next">-->
+              <!--<span class="glyphicon slider-btn-right"></span>-->
+            <!--</a>-->
+          <!--</div>-->
           <!--block for carousel---end---------------------------->
 
 
